header, footer, and products/card styles changes

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
-<section
-  class="min-h-screen flex flex-col items-center justify-center bg-gradient-to-b from-gray-100 to-gray-200 text-center px-6 py-16">
+<section class="bg-brand-white flex flex-col">
 
-  <Hero [products]="productService()"></Hero>
+  <Hero></Hero>
+  <Products [products]="productService()"></Products>
 
 </section>
