--- a/src/app/pages/home/components/hero/hero.componet.html
+++ b/src/app/pages/home/components/hero/hero.componet.html
@@ -1,4 +1,4 @@
-<section class="max-w-2xl mb-12">
+<section class=" bg-brand-white w-full px-4 py-2 overflow-hidden relative flex flex-col items-center">
 
   <h1 class="text-5xl font-extrabold text-blue-600 mb-4">Bienvenido a Web Store 🎉</h1>
   <h2 class="text-2xl text-gray-700 mb-6">Productos destacados</h2>
@@ -8,15 +8,4 @@
     Comprar ahora
   </button>
 
-  @if (products.length > 0) {
-  <div class="mt-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 max-w-6xl">
-
-    @for (product of products; track product._id) {
-    <Card [product]="product"></Card>
-    }
-  </div> }
-
-  @else {
-  <p class="text-gray-500">Cargando Productos...</p>
-  }
 </section>
