changes on footer, header, and hero-cards

--- a/src/app/pages/home/components/hero/hero.componet.html
+++ b/src/app/pages/home/components/hero/hero.componet.html
@@ -1,11 +1,16 @@
-<section class=" bg-brand-white w-full px-4 py-2 overflow-hidden relative flex flex-col items-center">
+<section class=" bg-brand-white w-full p-4 overflow-hidden relative flex-col items-center">
 
-  <h1 class="text-5xl font-extrabold text-blue-600 mb-4">Bienvenido a Web Store 🎉</h1>
-  <h2 class="text-2xl text-gray-700 mb-6">Productos destacados</h2>
+  <div class="bg-brand-purple rounded-3xl flex flex-col text-center ga-p4 pb-8">
+    <Header></Header>
 
-  <button
-    class="mt-2 bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-8 rounded-xl shadow-lg hover:shadow-xl transition-all duration-300">
-    Comprar ahora
-  </button>
+    <body class="flex flex-col items-center gap-2 p-2">
+      <h1 class="md:text-9xl text-7xl font-black text-white leading-none select-none tracking-tighter">Web Store
+      </h1>
+      <img
+        src="printful/unisex-crew-neck-sweatshirt-white-front-and-back-6931167923560.png"
+        alt="sweatshirt-white" class="mx-auto w-64 md:w-96 lg:w-[32rem]">
+    </body>
 
+
+  </div>
 </section>
