--- a/src/app/pages/layout/footer/footer.component.html
+++ b/src/app/pages/layout/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="bg-brand-white w-full p-4 overflow-hidden relative">
-  <div class="bg-brand-purple mx-auto sm:px-6 lg:px-8 py-16 rounded-3xl flex flex-col items-center justify-center text-center gap-12">
+  <div class="bg-brand-purple mx-auto sm:px-6 lg:px-8 py-16 rounded-3xl flex flex-col items-center justify-center text-center gap-8">
 
     <!-- Smiley Icon -->
     <!-- <div class="mb-6 transform hover:scale-110 transition-transform duration-300">
@@ -16,8 +16,8 @@
     </div> -->
 
     <!-- Main Title -->
-    <h1 class="md:text-7xl sm:text-4xl font-black text-white leading-none select-none text-brand-dark tracking-tighter">
-      Web<br />Store
+    <h1 class="md:text-7xl sm:text-4xl font-black text-white leading-none select-none tracking-tighter">
+      Web Store
     </h1>
 
     <!-- Navigation Links -->
@@ -25,6 +25,5 @@
       <a href="/" class="text-white font-medium hover:text-brand-green transition-colors text-lg">Home</a>
       <a href="/products" class="text-white font-medium hover:text-brand-green transition-colors text-lg">Products</a>
     </nav>
-
   </div>
 </footer>
