--- a/src/app/pages/home/components/products/products.component.html
+++ b/src/app/pages/home/components/products/products.component.html
@@ -1,7 +1,7 @@
 <section class=" bg-brand-white w-full px-4 py-2 overflow-hidden relative">
   @if (products.length > 0) {
   <div
-    class="mt-4 grid grid-cols-3 sm:grid-cols-3 gap-8 bg-brand-gray sm:px-6 lg:px-8 py-16 rounded-3xl items-center justify-center gap-12">
+    class="grid lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-1  bg-brand-gray sm:p-6 rounded-3xl items-center justify-center gap-12">
 
     @for (product of products; track product._id) {
     <Card [product]="product"></Card>
