--- a/src/app/pages/layout/header/header.component.html
+++ b/src/app/pages/layout/header/header.component.html
@@ -1,7 +1,7 @@
-<header class="w-full bg-brand-white p-4 flex justify-center relative z-50">
+<header class="flex justify-center relative lg:p-4 py-2 px-2 z-50">
   <!-- Pill Container -->
   <div
-    class="w-full max-w-7xl bg-brand-green rounded-full px-8 py-3 flex justify-between items-center shadow-lg relative z-50">
+    class="w-full max-w-7xl bg-brand-green rounded-3xl px-8 py-3 flex justify-between items-center shadow-lg relative z-50">
 
     <!-- Logo -->
     <div class="text-3xl font-black text-brand-dark tracking-tighter">
