--- a/src/app/pages/home/components/hero/hero.componet.html
+++ b/src/app/pages/home/components/hero/hero.componet.html
@@ -1,16 +1,14 @@
 <section class=" bg-brand-white w-full p-4 overflow-hidden relative flex-col items-center">
 
-  <div class="bg-brand-purple rounded-3xl flex flex-col text-center ga-p4 pb-8">
+  <div class="bg-brand-purple rounded-3xl flex flex-col text-center pb-4">
     <Header></Header>
 
-    <body class="flex flex-col items-center gap-2 p-2">
+    <body class="flex flex-col items-center pt-14">
+
       <h1 class="md:text-9xl text-7xl font-black text-white leading-none select-none tracking-tighter">Web Store
       </h1>
-      <img
-        src="printful/unisex-crew-neck-sweatshirt-white-front-and-back-6931167923560.png"
-        alt="sweatshirt-white" class="mx-auto w-64 md:w-96 lg:w-[32rem]">
+
+      <img src="hero/hero_img.webp" alt="sweatshirt-white" class="mx-auto w-64 md:w-96 lg:w-[32rem]">
     </body>
-
-
   </div>
 </section>
