--- a/src/app/pages/layout/footer/footer.component.html
+++ b/src/app/pages/layout/footer/footer.component.html
@@ -1,5 +1,6 @@
 <footer class="bg-brand-white w-full p-4 overflow-hidden relative">
-  <div class="bg-brand-purple mx-auto sm:px-6 lg:px-8 py-16 rounded-3xl flex flex-col items-center justify-center text-center gap-8">
+  <div
+    class="bg-brand-purple mx-auto sm:px-6 lg:px-8 py-16 rounded-3xl flex flex-col items-center justify-center text-center gap-8">
 
     <!-- Smiley Icon -->
     <!-- <div class="mb-6 transform hover:scale-110 transition-transform duration-300">
