--- a/src/app/pages/layout/header/header.component.html
+++ b/src/app/pages/layout/header/header.component.html
@@ -1,7 +1,7 @@
-<header class="flex justify-center relative lg:p-4 py-2 px-2 z-50">
+<header class="flex justify-center lg:p-4 py-2 px-2 z-50 ">
   <!-- Pill Container -->
   <div
-    class="w-full max-w-7xl bg-brand-green rounded-3xl px-8 py-3 flex justify-between items-center shadow-lg relative z-50">
+    class="w-full max-w-7xl fixed bg-brand-green rounded-3xl px-8 py-3 flex justify-between items-center shadow-lg z-50">
 
     <!-- Logo -->
     <div class="text-3xl font-black text-brand-dark tracking-tighter">
@@ -29,7 +29,7 @@
 
   <!-- Mobile Menu Dropdown -->
   <div
-    class="absolute top-full left-0 w-full bg-brand-white overflow-hidden transition-all duration-300 ease-in-out z-40"
+    class="absolute top-full left-0 w-full bg-brand-green overflow-hidden transition-all duration-300 ease-in-out z-40"
     [ngClass]="isMenuOpen ? 'max-h-96 opacity-100' : 'max-h-0 opacity-0'">
     <nav class="flex flex-col items-center gap-6 py-8 font-bold text-brand-dark text-xl">
       <a *ngFor="let item of menuItems" [routerLink]="item.link" (click)="toggleMenu()"
