product component refactor

--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -2,6 +2,6 @@
   <Header></Header>
 
   <body class="flex-grow">
-    <Products [products]="productService()"></Products>
+    <Products-component [products]="productService()"></Products-component>
   </body>
 </section>
