--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <section class="bg-brand-white flex flex-col">
 
   <Hero></Hero>
-  <Products [products]="productService()"></Products>
+  <Products-component [products]="productService()"></Products-component>
 
 </section>
