--- a/src/app/pages/store/components/Products.component.html
+++ b/src/app/pages/store/components/Products.component.html
@@ -1,6 +1,6 @@
 @for (product of products; track product.id){
 <div class="flex-grow flex flex-col lg:flex-row items-center gap-12 lg:gap-20 px-6 md:px-12 lg:px-20 pb-16 pt-6">
-  <!-- Product photo -->
+  <!-- Products image -->
   <div class="w-full lg:w-1/2 flex justify-center">
     <div class="bg-white rounded-3xl shadow-md flex items-center justify-center w-full max-w-2xl p-8">
       <img [src]="product.imageUrl" [alt]="product.name"
@@ -8,7 +8,7 @@
     </div>
   </div>
 
-  <!-- Product details -->
+  <!-- Products details -->
   <div class="w-full lg:w-1/2 space-y-6">
     <div class="space-y-3">
       <h1 class="text-4xl md:text-6xl font-black text-brand-dark tracking-tight">
