--- a/src/app/pages/home/components/products/products.component.html
+++ b/src/app/pages/home/components/products/products.component.html
@@ -3,7 +3,7 @@
   <div
     class="grid lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-1  bg-brand-gray sm:p-6 rounded-3xl items-center justify-center gap-12">
 
-    @for (product of products; track product._id) {
+    @for (product of products; track product.id) {
     <Card [product]="product"></Card>
     }
   </div> }
