--- a/src/app/pages/store/components/Products.component.html
+++ b/src/app/pages/store/components/Products.component.html
@@ -29,9 +29,16 @@
       </li>
     </ul>
 
-    <button
-      class="bg-brand-green text-brand-dark font-bold text-lg px-10 py-4 rounded-full shadow-md hover:shadow-lg transition-shadow w-full sm:w-auto">
-      Purchase
+    <button (click)="onPurchase(product)" [disabled]="isPaying()" [class.opacity-50]="isPaying()"
+      [class.cursor-not-allowed]="isPaying()"
+      class="bg-brand-green text-brand-dark font-bold text-lg px-10 py-4 rounded-full shadow-md hover:scale-105 transition-all w-full sm:w-auto">
+
+      @if (isPaying()) {
+      <span>Processing...</span>
+      } @else {
+      <span>Purchase</span>
+      }
+
     </button>
   </div>
 
