--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,7 +1,7 @@
 <section class="bg-brand-white flex flex-col">
   <Header></Header>
 
-  <body class="flex-grow">
+  <article class="flex-grow">
     <Products-component [products]="productService()"></Products-component>
-  </body>
+  </article>
 </section>
