--- a/src/app/pages/store/store.component.html
+++ b/src/app/pages/store/store.component.html
@@ -1,4 +1,4 @@
 <section class="bg-brand-white min-h-screen flex flex-col">
   <Header></Header>
-  <Products-store [products]="productService()"></Products-store>
+  <Products-store [products]="productService"></Products-store>
 </section>
